clean: rm unnecessary files